complete vsmc chapter

--- a/extra.bib
+++ b/extra.bib
@@ -33,8 +33,7 @@
     journal = {ArXiv e-prints},
     eprint = {1301.4019},
     primaryClass = "stat.CO",
-    year = 2013,
-    month = jan,
+    year = 2013
 }
 
 @book{cpptemplate,
@@ -61,7 +60,193 @@
     title = {{Data parallel algorithms}},
     year = {1986},
     journal = {Communications of the ACM},
-    issue = {29},
+    volume = {29},
     pages = {1170--1184}
 }
 
+@manual{aocl,
+    author = {{Advanced Micro Devices, Inc.}},
+    title = {{AMD Accelerated Parallel Processing OpenCL Programming
+        Guide}},
+    year = {2012},
+    note = {Version~2.8},
+    url = {http://developer.amd.com/tools-and-sdks/heterogeneous-computing/amd-accelerated-parallel-processing-app-sdk}
+}
+
+@manual{biips,
+    author = {Francois Caron and Adrien Todeschini and Pierrick Legrand and
+        Pierre Del Moral},
+    title = {{BiiPS: Bayesian Inference with Interacting Particle
+        Systems}},
+    year = {2012},
+    note = {Version~0.7.2},
+    url = {https://alea.bordeaux.inria.fr/biips/doku.php}
+}
+
+@manual{boost,
+    author = {Berman Dawes and others},
+    title = {Boost -- C++ Libraries},
+    year = {2013},
+    note = {Version~1.53},
+    url = {http://www.boost.org/}
+}
+
+@manual{bugs,
+    author = {David Spiegelhalter and Andrew Thomas and Nicky Best},
+    title = {{BUGS -- Bayesian Inference Using Gibbs Sampling}},
+    year = {1996},
+    note = {Version~0.5},
+    url = {http://www.mrc-bsu.cam.ac.uk/bugs/}
+}
+
+@manual{cilk,
+    author = {{Intel Cooperation}},
+    title = {{Intel Cilk Plus Language Specification}},
+    year = {2011},
+    note = {Version~1.1},
+    url = {http://cilkplus.org/}
+}
+
+@manual{clang,
+    author = {{The LLVM Developer Group}},
+    title = {{clang: A C Language Family Frontend for LLVM}},
+    year = {2013},
+    note = {Version~3.2},
+    url = {http://clang.llvm.org/}
+}
+
+@manual{cmake,
+    author = {Ken Martin and Bill Hoffman},
+    title = {{Mastering CMake}},
+    year = {2010},
+    note = {Version~2.8},
+    url = {http://www.cmake.org}
+}
+
+@manual{doxygen,
+    author = {Dimitri van Heesch},
+    title = {{Doxygen -- Generating Documentation from Source Code}},
+    year = {2013},
+    note = {Version~1.8.4},
+    url = {http://www.stack.nl/~dimitri/doxygen/index.html}
+}
+
+@manual{gcc,
+    author = {{GNU Project}},
+    title = {{GCC -- GNU Compiler Collection}},
+    year = {2013},
+    note = {Version~4.8.1},
+    url = {http://gcc.gnu.org}
+}
+
+@manual{git,
+    author = {Linus Torvalds and others},
+    title = {{Git -- Distributed Source Code Management}},
+    year = {2013},
+    note = {Version~1.8.3.1},
+    url = {http://git-scm}
+}
+
+@manual{icpc,
+    author = {{Intel Cooperation}},
+    title = {{Intel C++ Composer XE}},
+    year = {2013},
+    note = {Version~13.1},
+    url = {http://software.intel.com/en-us/intel-compilers}
+}
+
+@manual{iocl,
+    author = {{Intel Cooperation}},
+    title = {{Intel SDK for OpenCL Applications 2013}},
+    year = {2013},
+    url = {http://software.intel.com/en-us/vcsource/tools/opencl-sdk}
+}
+
+@manual{libcpp,
+    author = {{The LLVM Developer Group}},
+    title = {{``libc++'' C++ Standard Library}},
+    year = {2013},
+    note = {Version~1.1},
+    url = {http://libcxx.llvm.org}
+}
+
+@manual{mpi,
+    author = {{Message Passing Interface Forum}},
+    title = {{MPI: A Message-Passing Interface Starndard}},
+    year = {2012},
+    note = {Version~3.0},
+    url = {http://www.mpi-forum.org/}
+}
+
+@manual{msvc,
+    author = {{Microsoft Cooperation}},
+    title = {{Microsoft Visual C++ 2012}},
+    year = {2012},
+    url = {http://msdn.microsoft.com/en-us/vstudio/hh386302}
+}
+
+@manual{opencl,
+    author = {{Kronos OpenCL Working Group}},
+    title = {{The OpenCL Specification}},
+    year = {2012},
+    note = {Version~1.2},
+    url = {http://www.khronos.org/opencl/}
+}
+
+@manual{openmp,
+    author = {{OpenMP Architecture Review Board}},
+    title = {{OpenMP Application Program Interface}},
+    year = {2011},
+    note = {Version~3.1},
+    url = {http://www.openmp.org}
+}
+
+@manual{rlang,
+    author = {{R Core Team}},
+    title = {{R: A Language and Environment for Statistical
+        Computing}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2013},
+    note = {Version~2.15.2},
+    url = {http://www.r-project.org}
+}
+
+@article{smctc,
+    author = {Johansen, Adam M.},
+    title = {{SMCTC: Sequential Monte Carlo in C++}},
+    journal = {Journal of Statistical Software},
+    year = {2009},
+    volume = {30},
+    number = {6},
+    pages = {1--41}
+}
+
+@manual{tbb,
+    author = {{Intel Cooperation}},
+    title = {{Intel Threading Building Blocks}},
+    year = {2013},
+    note = {Version~4.1},
+    url = {http://threadingbuildingblocks.org/}
+}
+
+@article{metropolis1953,
+    author = {Nicholas Metropolis and Arianna W. Rosenbluth and Marshall N.
+        Rosenbluth and Augusta H. Teller and Edward Teller},
+    collaboration = {},
+    title = {Equation of State Calculations by Fast Computing Machines},
+    year = {1953},
+    journal = {The Journal of Chemical Physics},
+    volume = {21},
+    number = {6},
+    pages = {1087-1092},
+}
+
+@article{libbi,
+    author = {{Murray}, L.~M.},
+    title = {{Bayesian State-Space Modelling on High-Performance Hardware
+        Using LibBi}},
+    journal = {ArXiv e-prints},
+    eprint = {1306.3277},
+    year = 2013
+}
