--- a/macros.tex
+++ b/macros.tex
@@ -2,6 +2,7 @@
 \UseAbbr{aic}
 \UseAbbr{ais}
 \UseAbbr{bic}
+\UseAbbr{bsd}
 \UseAbbr{cess}
 \UseAbbr{cmos}
 \UseAbbr{cuda}
@@ -28,6 +29,7 @@
 \UseAbbr{nic}
 \UseAbbr{nls}
 \UseAbbr{ode}
+\UseAbbr{oop}
 \UseAbbr{pet}
 \UseAbbr{pmcmc}
 \UseAbbr{ps}
@@ -94,26 +96,38 @@
 \def\cppoo{{\allcapt C++11}\xspace}
 
 \def\aocl{\textsf{AMD APP OpenCL}\xspace}
+\def\armadillo{\textsf{Armadillo}\xspace}
+\def\biips{\textsf{BiiPS}\xspace}
+\def\blitzpp{\textsf{Blitz++}\xspace}
 \def\boost{\textsf{Boost}\xspace}
 \def\bugs{\textsf{\textsc{bugs}}\xspace}
 \def\cilk{\textsf{Intel Cilk Plus}\xspace}
 \def\clangstatic{\textsf{Clang Static Analyzer}\xspace}
 \def\clang{\textsf{Clang}\xspace}
 \def\cmake{\textsf{CMake}\xspace}
+\def\doxygen{\textsf{Doxygen}\xspace}
+\def\eigen{\textsf{Eigen}\xspace}
 \def\gcc{\textsf{GCC}\xspace}
 \def\git{\textsf{Git}\xspace}
 \def\html{\textsf{\textsc{html}}\xspace}
 \def\icpc{\textsf{Intel C++ Composer XE}\xspace}
 \def\inspector{\textsf{Intel Inspector XE}\xspace}
 \def\iocl{\textsf{Intel OpenCL}\xspace}
+\def\libbi{\textsf{LibBi}\xspace}
 \def\libcpp{\textsf{libc++}\xspace}
 \def\lldb{\textsf{\textsc{lldb}}\xspace}
+\def\mathematica{\textsf{Mathematica}\xspace}
+\def\matlab{\textsf{MatLab}\xspace}
+\def\minitab{\textsf{Minitab}\xspace}
 \def\mkl{\textsf{Intel MKL}\xspace}
 \def\msvc{\textsf{Microsoft Visual C++}\xspace}
 \def\opencl{\textsf{OpenCL}\xspace}
 \def\openmp{\textsf{OpenMP}\xspace}
 \def\random{\textsf{Random123}\xspace}
 \def\rlang{\textsf{R}\xspace}
+\def\sas{\textsf{\textsc{sas}}\xspace}
+\def\slang{\textsf{S}\xspace}
+\def\spss{\textsf{\textsc{spss}}\xspace}
 \def\tbb{\textsf{Intel TBB}\xspace}
 \def\vsmc{\textsf{vSMC}\xspace}
 
