--- a/tab/gmm-prob.tex
+++ b/tab/gmm-prob.tex
@@ -8,7 +8,7 @@
       \cmidrule(lr){3-9}
       Quantity & Algorithm & $\le2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $\ge8$ \\
       \midrule
-      $\Prob(\Mk|\data)$ & \smc[1]
+      $\Prob(\calM_k|\data)$ & \smc[1]
       & $0$ & $0.0022$ & $0.89$ & $0.10$ & $0.0064$ & $0.0014$ & $0$ \\
                          & \rjmcmc
       & $0$ & $0.0013$ & $0.89$ & $0.10$ & $0.0062$ & $0.0025$ & $0$ \\
