--- a/tab/node-s.tex
+++ b/tab/node-s.tex
@@ -4,7 +4,7 @@
   \label{tab:node-s}
   \begin{tabu}{X[1l]X[2c]X[2c]X[2c]X[4r]X[4r]X[6r]}
     \toprule
-    &&&& \multicolumn{2}{c}{Marginal likelihood ($\log p(\data|\Mk)\pm\sd$)} & Bayes factor ($\log B_{3,5}\pm\sd$) \\
+    &&&& \multicolumn{2}{c}{Marginal likelihood ($\log p(\data|\calM_k)\pm\sd$)} & Bayes factor ($\log B_{3,5}\pm\sd$) \\
     \cmidrule(lr){5-6}
     $T$   & Proposal & Annealing & Algorithm   & $m = 3$                & $m = 5$                & \\ \midrule
     $10 $ & Manual         & Prior (5) & \pmcmc      & $-109.7\pm3.2$         & $-120.3\pm2.5$         & $10.6\pm3.8$ \\
