--- a/tab/pet-py.tex
+++ b/tab/pet-py.tex
@@ -9,7 +9,7 @@
       \multicolumn{3}{l}{Annealing scheme} & Prior (5) & Posterior (5) & \multicolumn{2}{c}{Adaptive} \\
       \cmidrule(lr){1-3}\cmidrule(lr){4-4}\cmidrule(lr){5-5}\cmidrule(lr){6-7}
       %
-      $T$    & $N$   & Algorithm   & \multicolumn{4}{c}{Marginal likelihood estimates ($\log p(\paramk|\data)\pm\text{\sd}$)} \\ \midrule
+      $T$    & $N$   & Algorithm   & \multicolumn{4}{c}{Marginal likelihood estimates ($\log p(\theta_k|\data)\pm\text{\sd}$)} \\ \midrule
       $500$  & $30 $ & \pmcmc      & $ -39.1\pm  0.56$ & $-926.8\pm376.99$ && \\
       $500$  & $192$ & \smc2-\ds & $\B-39.2\pm0.25$ & $\B-39.7\pm1.06$ & $\B-39.2\pm0.18$ & $\R-39.1\pm0.12$ \\
              &       & \smc2-\ps & $\B-39.2\pm0.25$ & $-91.3\pm21.69$  & $\B-39.2\pm0.18$ & $-39.1\pm0.13$   \\
