--- a/thesis.tex
+++ b/thesis.tex
@@ -7,7 +7,7 @@ bib, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \author{Yan Zhou}
 \date{\today}
 
-\includeonly{chap/vsmc}
+% \includeonly{chap/vsmc}
 
 \begin{document}
 
