restructure vsmc chapter

--- a/extra.bib
+++ b/extra.bib
@@ -1,6 +1,40 @@
+@book{cpp03,
+    author = {Bjarne Stroustrup},
+    title = {The C++ Programming Language},
+    year = {2003},
+    publisher = {Addison-Wesley},
+    address = {New York, USA},
+    edition = {3}
+}
+
+@book{cpp13,
+    author = {Bjarne Stroustrup},
+    title = {The C++ Programming Language},
+    year = {2013},
+    publisher = {Addison-Wesley},
+    address = {New York, USA},
+    edition = {4}
+}
+
+@techreport{cpptemplateturing,
+    author = {Todd L. Veldhuizen},
+    title = {C++ Templates are Turing Complete},
+    institution = {},
+    year = {2003}
+}
+
+@book{evolutioncpp,
+    author = {Bjarne Stroustrup},
+    title = {The Design and Evolution of C++},
+    year = {1994},
+    publisher = {Addison-Wesley},
+    address = {New York, USA}
+}
+
 @article{Zhou2013,
     author    = {Y. Zhou and J. A. D. Aston and A. M. Johansen},
-    title     = {Bayesian Model Comparison for Compartmental Models with Applications in Positron Emission Tomography},
+    title     = {Bayesian codel comparison for compartmental codels with
+        applications in positron emission tomography},
     journal   = {Journal of Applied Statistics},
     year      = {2013},
     month     = {May},
@@ -9,9 +43,9 @@
     pages     = {993--1016}
 }
 
-@techreport{software:VSMC,
+@techreport{vsmcjss,
     author      = {Y. Zhou},
-    title       = {{vSMC}: Parallel Sequential {M}onte {C}arlo in {C++}},
+    title       = {{vSMC}: Parallel sequential {M}onte {C}arlo in {C++}},
     institution = {ArXiv},
     year        = {2013},
     type        = {Mathematics e-print},
