new vsmc chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, fontset=Minion, showoverfull,
+\documentclass[11pt, fontset=Minion, showoverfull, toclevel=3,
 bib, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
