section on parallel computing

--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,12 @@
+@book{parallel,
+    author = {Michael McCool and Arch D. Robison and James Reinders},
+    title = {Structured Parallel Programming: Patterns for Efficient
+	Computation},
+    year = {2012},
+    publisher = {Morgan Kaufmann},
+    address = {MA, USA}
+}
+
 @book{cpp03,
     author = {Bjarne Stroustrup},
     title = {The C++ Programming Language},
