vsmc chap draft

--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,76 @@
+@Manual{rsmc,
+    title = {SMC: Sequential Monte Carlo (SMC) Algorithm},
+    author = {Gopi Goswami},
+    year = {2011},
+    note = {R package version 1.1},
+    url = {http://CRAN.R-project.org/package=SMC}
+}
+
+@manual{matlab,
+    author = {{The MathWorks, Inc}},
+    title = {{MATLAB -- The Language of Tecchnical Computing}},
+    year = {2013},
+    note = {Version~2013b},
+    url = {http://www.mathworks.com/products/matlab/}
+}
+
+@inproceedings{pflib,
+    author = {{Chen}, L. and {Lee}, C. and {Budhiraja}, A. and {Mehra}, R.~K.},
+    title = {{PFLib: an object oriented MATLAB toolbox for particle filtering}},
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE)
+	Conference Series},
+    year = {2007},
+    series = {Society of Photo-Optical Instrumentation Engineers (SPIE)
+	Conference Series},
+    volume = {6567}
+}
+
+@article{rmcmcpack,
+    title = {{MCMCpack}: Markov Chain Monte Carlo in {R}},
+    author = {Andrew D. Martin and Kevin M. Quinn and Jong Hee Park},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {42},
+    number = {9},
+    pages = {22},
+    url = {http://www.jstatsoft.org/v42/i09/}
+}
+
+@Manual{rmcmc,
+    title = {mcmc: Markov Chain Monte Carlo},
+    author = {Charles J. Geyer and Leif T. Johnson},
+    year = {2013},
+    note = {R package version 0.9-2},
+    url = {http://CRAN.R-project.org/package=mcmc}
+}
+
+@manual{pymc,
+    author = {Chris Fonnesbeck and Anand Patil and David Huard and John
+	Salvatier},
+    title = {{Bayesian inference in Python}},
+    year = {2013},
+    note = {Version~2.3},
+    url = {https://github.com/pymc-devs/pymc}
+}
+
+@manual{cppbugs,
+    author = {Whit Armstrong},
+    title = {{C++ version of BUGS}},
+    year = {2012},
+    url = {https://github.com/armstrtw/CppBugs}
+}
+
+@article{rcoda,
+    title = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
+    author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines},
+    journal = {R News},
+    year = {2006},
+    volume = {6},
+    number = {1},
+    pages = {7--11},
+    url = {http://CRAN.R-project.org/doc/Rnews/}
+}
+
 @book{parallel,
     author = {Michael McCool and Arch D. Robison and James Reinders},
     title = {Structured Parallel Programming: Patterns for Efficient
@@ -43,7 +116,7 @@
 @article{Zhou2013,
     author    = {Y. Zhou and J. A. D. Aston and A. M. Johansen},
     title     = {Bayesian codel comparison for compartmental codels with
-        applications in positron emission tomography},
+	applications in positron emission tomography},
     journal   = {Journal of Applied Statistics},
     year      = {2013},
     month     = {May},
@@ -72,7 +145,7 @@
 @article{presampling,
     author = {Murray, L.M. and Lee, A. and Jacob, P.E.},
     title = {{Rethinking resampling in the particle filter on graphics
-        processing units}},
+	processing units}},
     journal = {ArXiv e-prints},
     eprint = {1301.4019},
     primaryClass = "stat.CO",
@@ -90,7 +163,7 @@
 @book{moderncpp,
     author = {Alexandrescu, Andrei},
     title = {{Moder C++ Design: Generic Programming and Design Patterns
-        Applied}},
+	Applied}},
     publisher = {Addison Wesley},
     series = {C++ In-Depth Series},
     editor = {Stroustrup, Bjarne},
@@ -110,7 +183,7 @@
 @manual{aocl,
     author = {{Advanced Micro Devices, Inc.}},
     title = {{AMD Accelerated Parallel Processing OpenCL Programming
-        Guide}},
+	Guide}},
     year = {2012},
     note = {Version~2.8},
     url = {http://developer.amd.com/tools-and-sdks/heterogeneous-computing/amd-accelerated-parallel-processing-app-sdk}
@@ -118,9 +191,9 @@
 
 @manual{biips,
     author = {Francois Caron and Adrien Todeschini and Pierrick Legrand and
-        Pierre Del Moral},
+	Pierre Del Moral},
     title = {{BiiPS: Bayesian Inference with Interacting Particle
-        Systems}},
+	Systems}},
     year = {2012},
     note = {Version~0.7.2},
     url = {https://alea.bordeaux.inria.fr/biips/doku.php}
@@ -132,6 +205,15 @@
     year = {2013},
     note = {Version~1.53},
     url = {http://www.boost.org/}
+}
+
+@book{bugsbook,
+    author = {David Lunn and Chris Jackson and Andrew Thomas and Nicky Best
+	and David Spiegelhalter},
+    title = {The BUGS Book: A Practical Guide to Bayesian Analysis},
+    year = {2012},
+    publisher = {CRC Press},
+    address = {New York, USA}
 }
 
 @manual{bugs,
@@ -247,7 +329,7 @@
 @manual{rlang,
     author = {{R Core Team}},
     title = {{R: A Language and Environment for Statistical
-        Computing}},
+	Computing}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
     year = {2013},
@@ -275,7 +357,7 @@
 
 @article{metropolis1953,
     author = {Nicholas Metropolis and Arianna W. Rosenbluth and Marshall N.
-        Rosenbluth and Augusta H. Teller and Edward Teller},
+	Rosenbluth and Augusta H. Teller and Edward Teller},
     collaboration = {},
     title = {Equation of State Calculations by Fast Computing Machines},
     year = {1953},
@@ -288,7 +370,7 @@
 @article{libbi,
     author = {{Murray}, L.~M.},
     title = {{Bayesian State-Space Modelling on High-Performance Hardware
-        Using LibBi}},
+	Using LibBi}},
     journal = {ArXiv e-prints},
     eprint = {1306.3277},
     year = 2013
