--- a/macros.tex
+++ b/macros.tex
@@ -54,7 +54,9 @@
 \UseAbbr[\clang][\sffamily]{Clang}
 \UseAbbr[\clangstatic][\sffamily]{Clang Static Analyzer}
 \UseAbbr[\cmake][\sffamily]{CMake}
+\UseAbbr[\rcoda][\sffamily\textsc]{coda}
 \UseAbbr[\cpp][\allcapt]{C++}
+\UseAbbr[\cppbugs][\sffamily]{CppBugs}
 \UseAbbr[\cppne][\allcapt]{C++98}
 \UseAbbr[\cppoo][\allcapt]{C++11}
 \UseAbbr[\doxygen][\sffamily]{Doxygen}
@@ -75,13 +77,21 @@
 \UseAbbr[\msvc][\sffamily]{Microsoft Visual C++}
 \UseAbbr[\opencl][\sffamily]{OpenCL}
 \UseAbbr[\openmp][\sffamily]{OpenMP}
+\UseAbbr[\pymc][\sffamily]{PyMC}
 \UseAbbr[\random][\sffamily]{Random123}
 \UseAbbr[\rlang][\sffamily]{R}
+\UseAbbr[\python][\sffamily]{Python}
+\UseAbbr[\perl][\sffamily]{Perl}
 \UseAbbr[\sas][\sffamily\textsc]{sas}
 \UseAbbr[\slang][\sffamily]{S}
 \UseAbbr[\spss][\sffamily\scshape]{spss}
 \UseAbbr[\tbb][\sffamily]{Intel TBB}
 \UseAbbr[\vsmc][\sffamily]{vSMC}
+\UseAbbr[\rmcmc][\sffamily]{mcmc}
+\UseAbbr[\rsmc][\sffamily]{smc}
+\UseAbbr[\smctc][\sffamily\textsc]{smctc}
+\UseAbbr[\rmcmcpack][\sffamily]{MCMCpack}
+\UseAbbr[\pflib][\sffamily]{PFLib}
 
 \UseMathCal{D}
 \UseMathCal{E}
