cleanup structure of vsmc chapter;

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, fontset=Minion, showoverfull, toclevel=3,
+\documentclass[11pt, fontset=Minion, showoverfull, toclevel=2,
 bib, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
@@ -7,7 +7,7 @@ bib, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \author{Yan Zhou}
 \date{\today}
 
-\includeonly{chap/vsmc}
+% \includeonly{chap/monte-carlo}
 
 \begin{document}
 
