--- a/macros.tex
+++ b/macros.tex
@@ -6,6 +6,7 @@
 \UseAbbr{bic}
 \UseAbbr{bsd}
 \UseAbbr{cess}
+\UseAbbr{clt}
 \UseAbbr{cmos}
 \UseAbbr{cpu}
 \UseAbbr{cuda}
@@ -16,10 +17,13 @@
 \UseAbbr{fic}
 \UseAbbr{fpe}
 \UseAbbr{gic}
+\UseAbbr{ghm}
 \UseAbbr{gmm}
 \UseAbbr{gpgpu}
 \UseAbbr{gpu}
+\UseAbbr{hm}
 \UseAbbr{ic}
+\UseAbbr{is}
 \UseAbbr{ieee}
 \UseAbbr{jags}
 \UseAbbr{mala}
@@ -40,6 +44,7 @@
 \UseAbbr{rng}
 \UseAbbr{simd}
 \UseAbbr{sis}
+\UseAbbr{slln}
 \UseAbbr{smp}
 \UseAbbr{tic}
 \UseAbbr{unix}
@@ -54,7 +59,6 @@
 \UseAbbr[\clang][\sffamily]{Clang}
 \UseAbbr[\clangstatic][\sffamily]{Clang Static Analyzer}
 \UseAbbr[\cmake][\sffamily]{CMake}
-\UseAbbr[\rcoda][\sffamily\textsc]{coda}
 \UseAbbr[\cpp][\allcapt]{C++}
 \UseAbbr[\cppbugs][\sffamily]{CppBugs}
 \UseAbbr[\cppne][\allcapt]{C++98}
@@ -77,21 +81,22 @@
 \UseAbbr[\msvc][\sffamily]{Microsoft Visual C++}
 \UseAbbr[\opencl][\sffamily]{OpenCL}
 \UseAbbr[\openmp][\sffamily]{OpenMP}
-\UseAbbr[\pymc][\sffamily]{PyMC}
-\UseAbbr[\random][\sffamily]{Random123}
-\UseAbbr[\rlang][\sffamily]{R}
-\UseAbbr[\python][\sffamily]{Python}
 \UseAbbr[\perl][\sffamily]{Perl}
+\UseAbbr[\pflib][\sffamily]{PFLib}
+\UseAbbr[\pymc][\sffamily]{PyMC}
+\UseAbbr[\python][\sffamily]{Python}
+\UseAbbr[\random][\sffamily]{Random123}
+\UseAbbr[\rcoda][\sffamily\textsc]{coda}
+\UseAbbr[\rlang][\sffamily]{R}
+\UseAbbr[\rmcmc][\sffamily]{mcmc}
+\UseAbbr[\rmcmcpack][\sffamily]{MCMCpack}
+\UseAbbr[\rsmc][\sffamily]{smc}
 \UseAbbr[\sas][\sffamily\textsc]{sas}
 \UseAbbr[\slang][\sffamily]{S}
+\UseAbbr[\smctc][\sffamily\textsc]{smctc}
 \UseAbbr[\spss][\sffamily\scshape]{spss}
 \UseAbbr[\tbb][\sffamily]{Intel TBB}
 \UseAbbr[\vsmc][\sffamily]{vSMC}
-\UseAbbr[\rmcmc][\sffamily]{mcmc}
-\UseAbbr[\rsmc][\sffamily]{smc}
-\UseAbbr[\smctc][\sffamily\textsc]{smctc}
-\UseAbbr[\rmcmcpack][\sffamily]{MCMCpack}
-\UseAbbr[\pflib][\sffamily]{PFLib}
 
 \UseMathCal{D}
 \UseMathCal{E}
@@ -103,6 +108,7 @@
 \UseMathCal{La}
 \UseMathCal{M}
 \UseMathCal{N}
+\UseMathCal{U}
 
 \UseMathBB{I}
 \UseMathBB{N}
