update Monte Carlo chapter

--- a/extra.bib
+++ b/extra.bib
@@ -1,3 +1,62 @@
+@incollection{Gilks:1996vx,
+    title = {{Strategies for improving MCMC}},
+    author ={Gilks, W. and Roberts, G.},
+    year = {1996},
+    pages = {89--114},
+    booktitle = {{Markov Chain Monte Carlo in Pratice}},
+    editor = {Gilks, W. and Richardson, S. and Spiegelhalter, D. and Best, N.
+        and McNeil, A and Sharples, L. and Kirby, A.},
+    address = {New York, USA},
+    publisher = {Chapman and Hall}
+}
+
+@article{Hobert:1997vx,
+    title = {{Connectedness conditions for the convergence of the Gibbs
+        sampler}},
+    journal = {Statistics {\&} Probability Letters},
+    volume = {33},
+    number = {3},
+    pages = {235--240},
+    year = {1997},
+    author = {J.P. Hobert and C.P. Robert and C. Goutis}
+}
+
+@article{ManSuk:1992vx,
+    author = {Oh, Man-Suk and Berger, James O.},
+    title = {{Adaptive importance sampling in monte carlo integration}},
+    journal = {Journal of Statistical Computation and Simulation},
+    volume = {41},
+    number = {3-4},
+    pages = {143--168},
+    year = {1992}
+}
+
+@book{mcmchandbook,
+    editor = {S. Brooks and A. Gelman and G. L. Jones and X.-L. Meng},
+    title =  {Handbook of {Markov Chain Monte Carlo}},
+    publisher = {CRC Press},
+    year = {2011}
+}
+
+@InCollection{Gelman:2011vx,
+    author = {A. Gelman and K. Shirley},
+    title = {Inference from Simulations and Monitoring Convergence},
+    booktitle = {Handbook of {Markov Chain Monte Carlo}},
+    crossref = {mcmc:tutorial:BGJM11},
+    pages = {163--174}
+}
+
+@article{Liu1995Gibbs,
+    title = {{Covariance Structure and Convergence Rate of the Gibbs Sampler
+        with Various Scans}},
+    author = {Liu, Jun S. and Wong, Wing H. and Kong, Augustine},
+    journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+    volume = {57},
+    number = {1},
+    pages = {157--169},
+    year = {1995}
+}
+
 @Manual{rsmc,
     title = {SMC: Sequential Monte Carlo (SMC) Algorithm},
     author = {Gopi Goswami},
@@ -18,10 +77,10 @@
     author = {{Chen}, L. and {Lee}, C. and {Budhiraja}, A. and {Mehra}, R.~K.},
     title = {{PFLib: an object oriented MATLAB toolbox for particle filtering}},
     booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE)
-	Conference Series},
+        Conference Series},
     year = {2007},
     series = {Society of Photo-Optical Instrumentation Engineers (SPIE)
-	Conference Series},
+        Conference Series},
     volume = {6567}
 }
 
@@ -32,7 +91,7 @@
     year = {2011},
     volume = {42},
     number = {9},
-    pages = {22},
+    pages = {1--22},
     url = {http://www.jstatsoft.org/v42/i09/}
 }
 
@@ -46,7 +105,7 @@
 
 @manual{pymc,
     author = {Chris Fonnesbeck and Anand Patil and David Huard and John
-	Salvatier},
+        Salvatier},
     title = {{Bayesian inference in Python}},
     year = {2013},
     note = {Version~2.3},
@@ -74,7 +133,7 @@
 @book{parallel,
     author = {Michael McCool and Arch D. Robison and James Reinders},
     title = {Structured Parallel Programming: Patterns for Efficient
-	Computation},
+        Computation},
     year = {2012},
     publisher = {Morgan Kaufmann},
     address = {MA, USA}
@@ -101,7 +160,7 @@
 @techreport{cpptemplateturing,
     author = {Todd L. Veldhuizen},
     title = {C++ Templates are Turing Complete},
-    institution = {},
+    institution = {Compuer Science, Indiana University},
     year = {2003}
 }
 
@@ -116,7 +175,7 @@
 @article{Zhou2013,
     author    = {Y. Zhou and J. A. D. Aston and A. M. Johansen},
     title     = {Bayesian codel comparison for compartmental codels with
-	applications in positron emission tomography},
+        applications in positron emission tomography},
     journal   = {Journal of Applied Statistics},
     year      = {2013},
     month     = {May},
@@ -145,7 +204,7 @@
 @article{presampling,
     author = {Murray, L.M. and Lee, A. and Jacob, P.E.},
     title = {{Rethinking resampling in the particle filter on graphics
-	processing units}},
+        processing units}},
     journal = {ArXiv e-prints},
     eprint = {1301.4019},
     primaryClass = "stat.CO",
@@ -163,7 +222,7 @@
 @book{moderncpp,
     author = {Alexandrescu, Andrei},
     title = {{Moder C++ Design: Generic Programming and Design Patterns
-	Applied}},
+        Applied}},
     publisher = {Addison Wesley},
     series = {C++ In-Depth Series},
     editor = {Stroustrup, Bjarne},
@@ -183,7 +242,7 @@
 @manual{aocl,
     author = {{Advanced Micro Devices, Inc.}},
     title = {{AMD Accelerated Parallel Processing OpenCL Programming
-	Guide}},
+        Guide}},
     year = {2012},
     note = {Version~2.8},
     url = {http://developer.amd.com/tools-and-sdks/heterogeneous-computing/amd-accelerated-parallel-processing-app-sdk}
@@ -191,9 +250,9 @@
 
 @manual{biips,
     author = {Francois Caron and Adrien Todeschini and Pierrick Legrand and
-	Pierre Del Moral},
+        Pierre Del Moral},
     title = {{BiiPS: Bayesian Inference with Interacting Particle
-	Systems}},
+        Systems}},
     year = {2012},
     note = {Version~0.7.2},
     url = {https://alea.bordeaux.inria.fr/biips/doku.php}
@@ -209,7 +268,7 @@
 
 @book{bugsbook,
     author = {David Lunn and Chris Jackson and Andrew Thomas and Nicky Best
-	and David Spiegelhalter},
+        and David Spiegelhalter},
     title = {The BUGS Book: A Practical Guide to Bayesian Analysis},
     year = {2012},
     publisher = {CRC Press},
@@ -329,7 +388,7 @@
 @manual{rlang,
     author = {{R Core Team}},
     title = {{R: A Language and Environment for Statistical
-	Computing}},
+        Computing}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
     year = {2013},
@@ -357,20 +416,20 @@
 
 @article{metropolis1953,
     author = {Nicholas Metropolis and Arianna W. Rosenbluth and Marshall N.
-	Rosenbluth and Augusta H. Teller and Edward Teller},
+        Rosenbluth and Augusta H. Teller and Edward Teller},
     collaboration = {},
     title = {Equation of State Calculations by Fast Computing Machines},
     year = {1953},
     journal = {The Journal of Chemical Physics},
     volume = {21},
     number = {6},
-    pages = {1087-1092},
+    pages = {1087--1092},
 }
 
 @article{libbi,
     author = {{Murray}, L.~M.},
     title = {{Bayesian State-Space Modelling on High-Performance Hardware
-	Using LibBi}},
+        Using LibBi}},
     journal = {ArXiv e-prints},
     eprint = {1306.3277},
     year = 2013
