--- a/macros.tex
+++ b/macros.tex
@@ -5,6 +5,7 @@
 \UseAbbr{ais}
 \UseAbbr{bic}
 \UseAbbr{bsd}
+\UseAbbr{cdf}
 \UseAbbr{cess}
 \UseAbbr{clt}
 \UseAbbr{cmos}
@@ -21,6 +22,7 @@
 \UseAbbr{gmm}
 \UseAbbr{gpgpu}
 \UseAbbr{gpu}
+\UseAbbr{gs}
 \UseAbbr{hm}
 \UseAbbr{ic}
 \UseAbbr{is}
@@ -29,6 +31,7 @@
 \UseAbbr{mala}
 \UseAbbr{mcmc}
 \UseAbbr{mdl}
+\UseAbbr{mh}
 \UseAbbr{mle}
 \UseAbbr{mpi}
 \UseAbbr{mse}
@@ -37,6 +40,7 @@
 \UseAbbr{ode}
 \UseAbbr{oop}
 \UseAbbr{opt}
+\UseAbbr{pdf}
 \UseAbbr{pet}
 \UseAbbr{pmcmc}
 \UseAbbr{ps}
@@ -48,6 +52,7 @@
 \UseAbbr{smp}
 \UseAbbr{tic}
 \UseAbbr{unix}
+\UseAbbr{wis}
 
 \UseAbbr[\aocl][\sffamily]{AMD APP OpenCL}
 \UseAbbr[\armadillo][\sffamily]{Armadillo}
